--- a/war/simulator.css
+++ b/war/simulator.css
@@ -5,7 +5,7 @@
   padding: 2px;
   margin-bottom:6px;
   width: 100%;
-  height: 100%;
+  height: 100%; 
 }
 
 .browserpanel {
@@ -13,7 +13,7 @@
   padding: 2px;
   margin-bottom:6px;
   height: 100%;
-}
+ }
 
 .menu {
   border: 1px solid silver;
@@ -39,6 +39,12 @@
 	width: 100%;
 }
 
+.dialogContents {
+	height: 500px;
+	width: 800px;
+	background-color: #858585;
+}
+
 body {
-  background-color: white;
+  background-color: #d5d5d5;
 }
