--- a/war/simulator.css
+++ b/war/simulator.css
@@ -92,7 +92,7 @@ body {
 	font-size: 40px;
 	font-weight: normal;
 	font-color: black;
-	text-align: right;
+	text-align: center;
 }
 
 @font-face {
@@ -105,7 +105,7 @@ body {
 	font-size: 70px;
 	font-weight: normal;
 	font-color: black;
-	text-align: left;
+	text-align: right;
 }
 
 .gwt-DialogBox .myCaption {
